# UberEditor-Windows

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  smoke.yml  tauri-release.yml  test.yml
crates/ue-ai/: Cargo.toml
crates/ue-ai/src/: emotion.rs  lib.rs  silence.rs  tts.rs
crates/ue-ai/tests/: silence_tests.rs
crates/ue-audio/src/: player.rs  stretch.rs
crates/ue-audio/tests/: audio_tests.rs
crates/ue-core/src/: action.rs  model.rs  ops.rs  store.rs  validate.rs
crates/ue-core/tests/: store_tests.rs
crates/ue-export/: Cargo.toml
crates/ue-export/src/: edl.rs  graph.rs  lib.rs  preview.rs
crates/ue-export/tests/: export_tests.rs
crates/ue-media/: Cargo.toml
crates/ue-media/src/: denoise.rs  frame.rs  hashing.rs  lib.rs  probe.rs  stream.rs
crates/ue-media/tests/: media_tests.rs
crates/ue-render/src/: lib.rs
docs/: ARCHITECTURE.md  DENOISE.md  MCP.md  PACKS.md  TTS.md
effects/core/chroma_key/: manifest.json
effects/core/drop_shadow/: manifest.json
scripts/: denoise_dns64.py  screenshot.mjs  tts_kokoro.py
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: verify_playback_fix.rs
src-tauri/src/: lib.rs  mcp.rs
src-tauri/tests/: mcp_tests.rs
src/components/: App.tsx  AvatarDialog.tsx  ExportDialog.tsx  Header.tsx  Inspector.tsx  MediaPool.tsx  Preview.tsx  Slider.tsx  StatusBar.tsx  Timeline.tsx  TranscriptPanel.tsx  VoiceoverSection.tsx
src/engine/: client.ts  compositor.ts  mock.ts  tauri.ts  types.ts  video-cache.ts
src/state/: store.ts
