[workspace]
resolver = "2"
members = [
    "crates/ue-core",
    "crates/ue-media",
    "crates/ue-audio",
    "crates/ue-render",
    "crates/ue-ai",
    "crates/ue-export",
    "src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = { version = "1", features = ["serde"] }
proptest = "1"

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
