[package]
name = "ue-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ue_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
ulid.workspace = true
ue-core = { path = "../crates/ue-core" }
ue-media = { path = "../crates/ue-media" }
ue-audio = { path = "../crates/ue-audio" }
ue-render = { path = "../crates/ue-render" }
ue-ai = { path = "../crates/ue-ai" }
ue-export = { path = "../crates/ue-export" }
tiny_http = "0.12"
