[package]
name = "ue-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ue-core = { path = "../ue-core" }
ue-audio = { path = "../ue-audio" }
ue-media = { path = "../ue-media" }

[dev-dependencies]
hound = "3.5"
